--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.18.2", features = ["macros", "sync"] }
+tokio = { version = "1.18.2", features = ["macros", "sync", "rt-multi-thread"] }
+tokio-stream = "*"
 warp = "0.3.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
