--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "1.0.0", features = ["serde", "v4"] }
+itertools = "0.10.3"
