--- a/wasm-client/Cargo.toml
+++ b/wasm-client/Cargo.toml
@@ -10,3 +10,17 @@ perseus = { version = "0.3.5", features = [ "hydrate" ] }
 sycamore = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+wasm-bindgen = "0.2.80"
+js-sys = "0.3"
+
+[dependencies.web-sys]
+version = "0.3.22"
+features = [ 
+  "BinaryType",
+  "Blob",
+  "ErrorEvent",
+  "FileReader",
+  "MessageEvent",
+  "ProgressEvent",
+  "WebSocket",
+]
