--- a/wasm-client/Cargo.toml
+++ b/wasm-client/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 wasm-bindgen = "0.2.80"
 js-sys = "0.3"
+regex = "1.5.5"
 
 [dependencies.web-sys]
 version = "0.3.22"
